# myEncoder

./: .gitignore  CMakeLists.txt  TODO  config.h.in  defs.h  encoder.h
reference/: ardec.m  arenc.m  arith_test.m  dpcm.m  motionEstAnalysis.m  motionEstAnalysis_test.m  readYFrame.m
src/: CMakeLists.txt  dct.c  encoder.c  huff.c  io.c  mb.c  mc.c  tss.c  vlc.c
tests/: CMakeLists.txt  dct_test.cc  io_test.cc  me_test.cc  vlc_test.cc
tests/data/: foreman_qcif.y4m
